    images. The request "base?m=SRC;v=xxx" displays the file
    "src/base/xxx.txt" (interpreting the macros if any). The request
    "base?m=IM;s=yyy" displays the image file "src/base/images/yyy" or
    "src/images/yyy". Code written by Ludovic Ledieu.
  - [08 Nov 00] Fixed bug: when giving 0 as Sosa number, it did not
    answer (infinite loop in gwd).

* Lexicon (lang/lexicon.txt)
  - [13 Nov 00] Deleted entry "of": using only "%1 of %2" now. Some
    consequences in displaying (depending on language).

* GeneWeb data bases Transfer Program (gwtp)
  - [07 Nov 00] Added "body_prop" (text added inside the tag "body" in
    generated pages, what allows to change the background, for example)
    among configurable variables (conf.txt).

* Installation under Linux rpm
  - [07 Nov 00] Put logs for gwsetup and gwd on /var/log.

GeneWeb version 3.09
--------------------

* GeneWeb server or CGI (gwd)
  - [05 Nov 00] In case of loop in data base, which stops all relationship
    computations, the error message now displays one person who is his/her
    own ancestor, allowing the wizard to fix the error.
  - [04 Nov 00] Changed forum displaying. The main page now displays only
    the headers.
  - [04 Nov 00] Fixed bug: when merging two persons, the possible notes
    of the second person could disappear.
  - [03 Nov 00] In tree display, when "images" is selected,
    also display spouses' images.
  - [02 Nov 00] Added "subject" in forum.
  - [02 Nov 00] Now display French republican years in roman digits.
  - [01 Nov 00] In nobility title display, added a link to display the
    tree of their relationship links. The tree contains only six persons
    at the same time (and a link for the next ones).
  - [28 Oct 00] Added a trace of the last "wizard" accesses (in the
    file cnt/base_w.txt). The idea is to know if some "wizards" are no
    more using their connections. Applies only to wizards defined in the